--- a/Expressions_Worksheet/js/index.html
+++ b/Expressions_Worksheet/js/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>How old is Sparky</title>
     <script src="script.js"></script>
 </head>
 <body>
