--- a/Thomas_Leonard_Expressions_Assignment/js/Expressions_Assignment.html
+++ b/Thomas_Leonard_Expressions_Assignment/js/Expressions_Assignment.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Purchase your ticket here</title>
+    <script src="js/Expressions_Assignments.js"></script>
 </head>
 <body>
 </body>
