--- a/Expressions_Assignment/js2/Expressions_Assignment.html
+++ b/Expressions_Assignment/js2/Expressions_Assignment.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Purchase your ticket here</title>
-    <script src = "js2/Expressions_Assignment.js" ></script>
+    <title></title>
 </head>
 <body>
 </body>
