--- a/Expressions_Assignment/js2/Expressions_Assignment.html
+++ b/Expressions_Assignment/js2/Expressions_Assignment.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <script src="js2/Expressions_Assignment.js"></script>
 </head>
 <body>
 </body>
